--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,32 @@ body {
   object-fit: cover;
 }
 
+/* Email Button */
+.btn {
+  display: inline-block;
+  background-color: #FFF;
+  color: #1A1B21;
+  padding: .5em 84.95px;
+  border-radius: 5px;
+  text-decoration: none;
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-around;
+  max-width: 236px;
+  margin: 1em auto;
+}
+
+.btn:focus,
+.btn:hover {
+  background-color: #F3BF99;
+}
+
+.btn img {
+  height: 20px;
+  object-fit: cover;
+  margin-right: .5em;
+}
+
 /* Typography */
 
 .fullname,
@@ -53,8 +79,13 @@ p {
   background-color: #1A1B21;
 }
 
+.info {
+  text-align: center;
+}
+
 .about,
 .interests,
 .footer {
   padding: 0 2em;
+  margin-top: 1em;
 }
