--- a/src/index.css
+++ b/src/index.css
@@ -89,3 +89,31 @@ p {
   padding: 0 2em;
   margin-top: 1em;
 }
+
+/* footer */
+
+.footer {
+  background-color: #161619;
+  padding-top: 1em;
+  padding-bottom: 1em;
+}
+
+.icons {
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+}
+
+.icons a {
+  transform: scale(1);
+  transition: transform 250;
+}
+
+.icons a:hover,
+.icons a:focus {
+  transform: scale(1.3);
+}
+
+.icons img {
+  margin: 0 1em
+}
